fix: navbar fixed for overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   color: #303133;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
